# gpu-miner

./: CMakeLists.txt  build.ps1  deps.sh  get-miner.sh
.github/workflows/: build.yml  docker-build.yml
src/: blake3.cu  main.cu
src/blake3/: inlined-blake.h  original-blake.h
